# ur7e-aruco-llm

./: .gitignore  000_find_opencv_camera_id.py  007_find_orbec_camera_id.py  012_freedrive_tcp_position_print.py  README.md  audio_server.py  camera_aruco.py  dist_coeffs.npy  handeye_result.npz  index.html  main.py  planner.py  podlaczenie_bezposrednie_kabla.txt  robot_positions.json  test_lift_boxes_0_to_5.py  transforms.py  ur_robot.py  voice_select.py
html_visualisation/: 012_freedrive_tcp_position_print.py  audio_server.py  camera_aruco.py  camera_matrix.npy  handeye_dataset.npz  index.html  main.py  planner.py  pyproject.toml  requirements.txt  robot_positions.json  voice_select.py
